[gd_scene load_steps=2 format=3 uid="uid://j1gacyfoch0q"]

[ext_resource type="Script" path="res://main_login/multiplayer_config_controller.gd" id="1_21fje"]

[node name="MultiplayerConfigUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21fje")

[node name="BtnHost" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 85.0
offset_right = 174.0
offset_bottom = 122.0
text = "HOST"

[node name="BtnJoin" type="Button" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 85.0
offset_right = 349.0
offset_bottom = 122.0
text = "JOIN"

[node name="BtnStartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 359.0
offset_top = 85.0
offset_right = 522.0
offset_bottom = 122.0
text = "START_GAME"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 39.0
offset_right = 522.0
offset_bottom = 70.0
placeholder_text = "Player Name"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 41.0
offset_right = 113.0
offset_bottom = 64.0
text = "Enter Name:"

[connection signal="pressed" from="BtnHost" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="BtnJoin" to="." method="_on_btn_join_pressed"]
[connection signal="pressed" from="BtnStartGame" to="." method="_on_btn_start_game_pressed"]
